maze.island.IslandMaze.scala.code
override def run() {
  etat(0)
  
  def etat(e:Int) {
    e match {
      case 0 => nord()
      case 1 => suivreMur()
    }
  }
  
  def suivreMur() {
    while(!estSurBiscuit())
      conditionSuivreMur(droite(), gauche())
    prendBiscuit()
  }
  
  def nord() {
    setDirection(Direction.NORTH)
    while(getY() != 0) {
      if(getDirection == Direction.NORTH && !estFaceMur())
      	avance()
      else {
        if(getDirection == Direction.EAST)
          conditionSuivreMur(gauche(), droite())
        else conditionSuivreMur(droite(), gauche())
      }
    }
    etat(1)
  }

  def conditionSuivreMur(dir1, dir2) {
    avance()
  }
}